2008-12-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9977: Extensions class.ext_update.php scripts are executed even when extension isn't loaded

2008-12-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #8952: Flags are missing
    * Fixed bug #8525: added Korean flag
    
2008-12-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9772: t3lib_parsehtml_proc does not provide Page TSConfig to user-defined RTE transformations

2008-12-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #7265: Submodules of Web module can't work with mod.php and the _DISPATCH system

2008-12-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9947: gzip compression does not work in BE at all
	* Fixed bug #9741: wrong anchor links with absRefPrefix option enabled (tanks to Stefan Galinski)

2008-12-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #9511: getHtmlTemplate should use resolveBackPath. Fixes bug for extension BE modules using templates in certain environments (symlinked typo3/ dir) (thanks to Steffen Gebert)

2008-12-10  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9836: RTE TSconfig lost when uploading files or creating folders

2008-12-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9915: Typing error in tslib_content ($gifCreateor => $gifCreator)

2008-12-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9890: sectionIndex in Menu doesn't work

2008-12-03  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #6415: preg_replace error on PHP 5.2 sometimes resulting in empty pages (thanks to Francois Suter)

2008-12-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE version to 1.7.8 for TYPO3 4.2.4
	* Fixed bug #9878: htmlArea RTE: js error may be raised when loading through IRRE Ajax call

2008-12-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9790: class.gzip_encode.php fails with open_basedir restrictions

2008-12-01  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9864: felogin: Drop languages from locallang.xml
